tests/baselines/reference/newNonReferenceType.errors.txt
==== tests/cases/compiler/newNonReferenceType.ts (2 errors) ====
    var a = new any();
                ~~~
!!! error TS2304: Cannot find name 'any'.
    var b = new boolean(); // error
                ~~~~~~~
!!! error TS2304: Cannot find name 'boolean'.
    